[package]
name = "ckb-spv-header"
version = "0.1.0"
authors = ["Ethan Hu <fendouhyz@163.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rand = "0.6"

jsonrpc-core = "14.0"
jsonrpc-derive = "14.0"

ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2", features = ["secp"] }
ckb-build-info = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
